2003-03-10  Oliver Kiddle  <opk@zsh.org>

	* 18330: Src/math.c: save output of setlocale as the pointer it
	returns gets clobbered

	* 18331: Completion/Unix/Command/_mh: use _call_program to avoid
	command not found errors, handle prefix-hidden style, make use of
	_email_addresses and complete for more mh commands

2003-03-07  Peter Stephenson  <pws@csr.com>

	* 18327: Completion/compinstall: add handling for preserve-prefix.

	* 18325: Src/Modules/parameter.c: options on by default weren't
	handled correctly.

	* 18319: Philippe Troin: Src/exec.c, Src/init.c, Src/jobs.c:
	Fix various process group problems associated with certain
	versions of `su'.  In particular, this improves `suspend'
	behaviour.

2003-03-06  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18314: Completion/Unix/Command/_ruby: allow -I, -r, -e and script
	arguments to be given multiple times; complete -T with the legal taint
	levels; complete with *.rb instead of all files

2003-03-05  Peter Stephenson  <pws@csr.com>

	* 18318: Src/Zle/zle_params.c: memory leak in PREDISPLAY and
	POSTDISPLAY when setting zero length values.

2003-02-27  Peter Stephenson  <pws@csr.com>

	* 18313: Src/Zle/zle_misc.c: After a single yank (hence
	no kill ring), yank-pop	did unpleasant things with a NULL pointer.

2003-02-27  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_tar: correct my typo

2003-02-27  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18305: Completion/Unix/Command/_python: new completion for
	python.

2003-02-27  Geoff Wing  <gcw@zsh.org>

	* 18306: Src/Zle/zle_refresh.c: fix redisplay of rprompt when line
	shortens

2003-02-26  Clint Adams  <clint@zsh.org>

	* 18303: zshconfig.ac: fix some always-true test evaluations.

2003-02-26  Oliver Kiddle  <opk@zsh.org>

	* 18299: Completion/Base/Core/_main_complete,
	Completion/Base/Core/_all_labels, Completion/Base/Core/_next_label,
	Completion/Base/Widget/_next_tags: allow _next_tags to work with
	nested tag loops
